# gr-teleskop

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.md  README.md
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-teleskopConfig.cmake
docs/: CMakeLists.txt  README.teleskop
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: ata_guppi_reader_ex.py  reader.grc
grc/: CMakeLists.txt  teleskop_reader.block.yml
include/gnuradio/teleskop/: CMakeLists.txt
include/teleskop/: CMakeLists.txt  api.h
lib/: CMakeLists.txt
python/: CMakeLists.txt  __init__.py  qa_reader.py  reader.py  tools.py
python/bindings/: CMakeLists.txt  python_bindings.cc
